# chatgpt-cbs-opendata-plugin

./: .env.example  .gitignore  README.md  logging.conf  pyproject.toml
.well-known/: ai-plugin.json  openapi.yaml
models/: api.py
server/: constants.py  index.html  logging.py  main.py  pandas_custom_display.py  routes.py  table.py  table_list.py  table_querier.py
services/: openai.py
tests/: conftest.py  test_api_query_table_data.py  test_api_table_metadata.py  test_filtered_table.py  test_table_querier.py
