[tool.poetry]
name = "chatgpt-cbs-opendata-plugin"
version = "0.1.0"
description = ""
authors = ["Yeb Havinga <yhavinga@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_cbs_opendata_plugin"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
cbsodata = "^1.3.4"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
openai = "^0.27.4"
tiktoken = "^0.3.3"
pytest = "^7.2.2"
asyncpg = "^0.27.0"
tenacity = "^8.2.2"
backoff = "^2.2.1"
pytest-asyncio = "^0.21.0"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
